Fix gas input styling on mobile view

--- a/ui/app/css/itcss/components/confirm.scss
+++ b/ui/app/css/itcss/components/confirm.scss
@@ -85,8 +85,10 @@
   background: $athens-grey;
   position: absolute;
   transform: rotate(45deg);
-  left: 178px;
   top: 71px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
 .confirm-screen-title {
